--- a/llm-servers/vllm/hpu/gitops/deployment.yaml
+++ b/llm-servers/vllm/hpu/gitops/deployment.yaml
@@ -22,7 +22,7 @@ spec:
           image: quay.io/rusrin/vllm-fork-gaudi:ubi9.4_1.20.0
           imagePullPolicy: Always
           args:
-            - "--model=mistralai/Mistral-7B-Instruct-v0.3"
+            - "--model=ibm-granite/granite-3.2-8b-instruct"
             - "--download-dir"
             - "/models-cache"           
             - "--device"
@@ -32,9 +32,12 @@ spec:
             - "--pipeline-parallel-size"
             - "1"
             - "--dtype"
-            - "bfloat16"
-            - "--max-model-len"
-            - "6144"
+            - "float16"
+            - "--enable-auto-tool-choice"
+            - "--tool-call-parser"
+            - "granite"
+            - "--chat-template"
+            - "/app/tool_chat_template_granite.jinja"
           ports:
             - name: http
               containerPort: 8000
@@ -57,12 +60,12 @@ spec:
               value: "true"
           resources:
             limits:
-              cpu: "8"
+              cpu: "32"
               memory: 55Gi
               habana.ai/gaudi: 1
               hugepages-2Mi: 8000Mi
             requests:
-              cpu: "6"
+              cpu: "32"
               memory: 50Gi
               habana.ai/gaudi: 1
               hugepages-2Mi: 8000Mi
@@ -112,6 +115,9 @@ spec:
               mountPath: /.cache
             - name: config
               mountPath: /.config
+            - name: chat-template-volume
+              mountPath: /app/tool_chat_template_granite.jinja
+              subPath: tool_chat_template_granite.jinja              
       volumes:
         - name: models-cache
           persistentVolumeClaim:
@@ -126,6 +132,9 @@ spec:
           emptyDir: {}
         - name: config
           emptyDir: {}
+        - name: chat-template-volume
+          configMap:
+            name: vllm-chat-template          
       dnsPolicy: ClusterFirst
       tolerations:
         - key: habana.ai/gaudi
