--- a/llm-servers/vllm/hpu/gitops/kustomization.yaml
+++ b/llm-servers/vllm/hpu/gitops/kustomization.yaml
@@ -11,3 +11,8 @@ resources:
 # wave 1
 - deployment.yaml
 - service.yaml
+
+configMapGenerator:
+  - name: vllm-chat-template
+    files:
+      - tool_chat_template_granite.jinja
